# GezAI-app

./: .gitignore  CLAUDE.md  README.md  firestore.indexes.json  firestore.rules
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/assets/: terms_of_service.txt  terms_of_service_tr.txt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/config/: constants.dart  router.dart
app/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_tr.dart  app_tr.arb
app/lib/models/: advice_route.dart  category.dart  duration.dart  llm_route_output.dart  maplink.dart  models.dart  mood.dart  place.dart  route.dart  route_model.dart  route_result.dart  transport.dart  user.dart
app/linux/: CMakeLists.txt
app/test/: README.md  widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
backend/: .gcloudignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: advice_routes.py  map_link.py  places.py  routes.py  saved_routes.py
backend/app/core/: async_utils.py  auth.py  config.py  firebase.py
backend/app/repository/: advice_routes_repository.py  place_repository.py  route_repository.py  saved_routes_repository.py
backend/app/schemas/: advice_routes.py  map_link.py  place.py  route.py  saved_routes.py
backend/app/services/: advice_routes_service.py  google_maps_link_service.py  google_place_service.py  route_service.py  saved_routes_service.py
docs/: PRD.md  TECHNICAL.md
(+88 files in other folders)
